[project]
name = "lips-unlabeled-data"
version = "1.0.0"
description = "Code for: Learning Interacting Particle Systems from Unlabeled Snapshot Data"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "torch>=1.12",
    "matplotlib>=3.5",
    "pyyaml>=5.4",
    "sympy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
